--- a/classes/cluster/mcp-offline/infra/config.yml
+++ b/classes/cluster/mcp-offline/infra/config.yml
@@ -7,11 +7,11 @@ classes:
 - system.salt.minion.ca.salt_master
 - system.salt.master.api
 - system.reclass.storage.salt
-- cluster.mcp-offline-lab.infra
+- cluster.mcp-offline.infra
 parameters:
   _param:
     salt_master_base_environment: prd
-    reclass_data_repository: "https://github.com/richardfelkl/mcp-offline-lab-model.git"
+    reclass_data_repository: "https://github.com/richardfelkl/mcp-offline-model.git"
     reclass_data_revision: master
     reclass_config_master: ${_param:infra_config_deploy_address}
     single_address: ${_param:infra_config_address}
