--- a/classes/cluster/mcp-offline/infra/aptly.yml
+++ b/classes/cluster/mcp-offline/infra/aptly.yml
@@ -1,8 +1,36 @@
 classes:
 - system.aptly.server.single
+- system.aptly.server.mirror.debian
+- system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.salt
+- system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.extra
+- system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.mitaka
+- system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.oc323
+- system.aptly.server.mirror.ubuntu.trusty.mcp.openstack_mitaka
+- system.aptly.server.mirror.ubuntu.trusty.grafana
+- system.aptly.server.mirror.ubuntu.trusty.haproxy
+- system.aptly.server.mirror.ubuntu.trusty.rabbitmq
+- system.aptly.server.mirror.ubuntu.trusty.salt
+#- system.aptly.server.mirror.ubuntu.trusty.ubuntu
+- system.aptly.server.mirror.ubuntu.xenial.mcp.openstack_ocata
+- system.aptly.server.mirror.ubuntu.xenial.mcp.openstack_mitaka
+- system.aptly.server.mirror.ubuntu.xenial.mcp.apt_mk.salt
 - system.aptly.server.mirror.ubuntu.xenial.mcp.apt_mk.extra
+- system.aptly.server.mirror.ubuntu.xenial.mcp.apt_mk.ocata
+- system.aptly.server.mirror.ubuntu.xenial.mcp.apt_mk.oc323
+- system.aptly.server.mirror.ubuntu.xenial.influxdb
+- system.aptly.server.mirror.ubuntu.xenial.glusterfs
+- system.aptly.server.mirror.ubuntu.xenial.maas
+- system.aptly.server.mirror.ubuntu.xenial.docker
+- system.aptly.server.mirror.ubuntu.xenial.grafana
+#- system.aptly.server.mirror.ubuntu.xenial.ubuntu
+- system.aptly.server.mirror.ubuntu.xenial.salt
+- system.aptly.server.repo.ubuntu.trusty.extra
+- system.aptly.server.repo.ubuntu.trusty.openstack
+- system.aptly.server.repo.ubuntu.trusty.salt
+- system.aptly.server.repo.ubuntu.trusty.opencontrail
 - system.aptly.server.repo.ubuntu.xenial.extra
-- system.linux.system.repo.docker
+- system.aptly.server.repo.ubuntu.xenial.openstack
+- system.aptly.server.repo.ubuntu.xenial.salt
 - system.linux.system.repo.docker_legacy
 - system.git.server.single
 - service.docker.host
