--- a/classes/cluster/mcp-offline/infra/aptly.yml
+++ b/classes/cluster/mcp-offline/infra/aptly.yml
@@ -1,17 +1,15 @@
 classes:
 - system.aptly.server.single
-- system.aptly.server.mirror.debian
+- system.aptly.server.mirror.debian.aptly
+- system.aptly.server.mirror.debian.cassandra
+- system.aptly.server.mirror.debian.elasticsearch
 - system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.salt
 - system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.extra
 - system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.mitaka
 - system.aptly.server.mirror.ubuntu.trusty.mcp.apt_mk.oc323
 - system.aptly.server.mirror.ubuntu.trusty.mcp.openstack_mitaka
-- system.aptly.server.mirror.ubuntu.trusty.ceph
-- system.aptly.server.mirror.ubuntu.trusty.docker
-- system.aptly.server.mirror.ubuntu.trusty.docker_legacy
 - system.aptly.server.mirror.ubuntu.trusty.grafana
 - system.aptly.server.mirror.ubuntu.trusty.haproxy
-- system.aptly.server.mirror.ubuntu.trusty.rabbitmq
 - system.aptly.server.mirror.ubuntu.trusty.salt
 #- system.aptly.server.mirror.ubuntu.trusty.ubuntu
 - system.aptly.server.mirror.ubuntu.xenial.mcp.openstack_ocata
@@ -29,13 +27,6 @@ classes:
 - system.aptly.server.mirror.ubuntu.xenial.grafana
 #- system.aptly.server.mirror.ubuntu.xenial.ubuntu
 - system.aptly.server.mirror.ubuntu.xenial.salt
-- system.aptly.server.repo.ubuntu.trusty.extra
-- system.aptly.server.repo.ubuntu.trusty.openstack
-- system.aptly.server.repo.ubuntu.trusty.salt
-- system.aptly.server.repo.ubuntu.trusty.opencontrail
-- system.aptly.server.repo.ubuntu.xenial.extra
-- system.aptly.server.repo.ubuntu.xenial.openstack
-- system.aptly.server.repo.ubuntu.xenial.salt
 - system.linux.system.repo.aptly
 - system.linux.system.repo.docker_legacy
 - system.git.server.single
@@ -177,26 +168,26 @@ parameters:
             name: mysql:5.6
           - registry: grafana
             name: grafana:4.5.2
-          - registry: docker-prod-local.artifactory.mirantis.com/openstack-docker
-            name: heka:latest
           - registry: dockersamples
             name: visualizer:latest
-          - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
-            name: security-monkey-api:latest
           - registry: docker.elastic.co/elasticsearch
             name: elasticsearch:5.4.1
+          - registry: library
+            name: mongo:3.4
+          - registry: library
+            name: postgres:9.6
+          - registry: docker-prod-local.artifactory.mirantis.com/openstack-docker
+            name: heka:latest
+          - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
+            name: security-monkey-api:latest
           - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
             name: security-monkey-scheduler:latest
           - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
             name: janitor-monkey:latest
-          - registry: library
-            name: mongo:3.4
           - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
             name: rundeck:latest
           - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
             name: devops-portal:latest
-          - registry: library
-            name: postgres:9.6
           - registry: docker-prod-local.artifactory.mirantis.com/mirantis/oss
             name: pushkin:latest
           - registry: docker-prod-local.artifactory.mirantis.com/openstack-docker
