--- a/classes/cluster/mcp-offline/infra/aptly.yml
+++ b/classes/cluster/mcp-offline/infra/aptly.yml
@@ -10,7 +10,7 @@ classes:
 - system.aptly.server.mirror.ubuntu.trusty.mcp.openstack_mitaka
 - system.aptly.server.mirror.ubuntu.trusty.grafana
 - system.aptly.server.mirror.ubuntu.trusty.salt
-#- system.aptly.server.mirror.ubuntu.trusty.ubuntu
+#- system.aptly.server.mirror.ubuntu.trusty.ubuntu.trusty.main
 - system.aptly.server.mirror.ubuntu.xenial.mcp.openstack_ocata
 - system.aptly.server.mirror.ubuntu.xenial.mcp.openstack_mitaka
 - system.aptly.server.mirror.ubuntu.xenial.mcp.apt_mk.salt
@@ -24,7 +24,7 @@ classes:
 - system.aptly.server.mirror.ubuntu.xenial.docker_legacy
 - system.aptly.server.mirror.ubuntu.xenial.ceph
 - system.aptly.server.mirror.ubuntu.xenial.grafana
-#- system.aptly.server.mirror.ubuntu.xenial.ubuntu
+- system.aptly.server.mirror.ubuntu.xenial.ubuntu
 - system.aptly.server.mirror.ubuntu.xenial.salt
 - system.linux.system.repo.aptly
 - system.linux.system.repo.docker_legacy
@@ -35,6 +35,7 @@ classes:
 - cluster.mcp-offline.infra
 parameters:
   _param:
+    ubuntu_mirror_url: archive.ubuntu.com
     aptly_gpg_keypair_id: A8272E04
     aptly_gpg_passphrase: ""
     aptly_server_secure: true
